Edit files towards assignment
Removed several files; defined relevant functions

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,8 +8,7 @@
     <li><a href="{{ url_for('main') }}">Main page</a></li>
     <li><a href="{{ url_for('hello')}}">Hello</a></li>
     <li><a href="{{ url_for('ask') }}">Ask</a></li>
-    <li><a href="{{ url_for('submit_basic') }}">Submit (basic)</a></li>
-    <li><a href="{{ url_for('submit') }}">Submit (advanced)</a></li>
+    <li><a href="{{ url_for('submit') }}">Submit</a></li>
   </ul>
 </nav>
 <section class="content">
