--- a/app/templates/submit.html
+++ b/app/templates/submit.html
@@ -1,29 +1,31 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}Submit a File{% endblock %}</h1>
+  <h1>{% block title %}Submit{% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
   <form method="post" enctype="multipart/form-data">
-      <label for="image">Please upload an image.</label><br>
-      <input type="file" name="image" id="image">
+      <label for="message">Your Message.</label>
+      <br>
+      <input type = "text" name="message" id="message">
+      <br>
+      <label for="name">Your Name or Handle</label>
+       <br>
+      <input type = "text" name="handle" id="handle">
+       <br>
       <input type="submit" value="Submit form">
   </form>
 
   {% if thanks %}
-    Thanks for submitting a file!
-  {% endif %}
-
-  {% if digit %}
     <br>
-    Thanks for the image!  It looks like a {{digit}}.
-    <br>
-    <img src="{{ image }}", alt="an 8x8 visualization of the supplied digit."/>
+    Thanks for submitting a message!
   {% endif %}
 
   {% if error %}
     <br>
-    Oh no, we couldn't use that file!  Please upload an 8x8 numpy array as a text file.
+    Oh no, we couldn't use that message!
   {% endif %}
+
 {% endblock %}
+  
