--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,9 +6,9 @@
   <!-- <b>Navigation:</b> -->
   <ul>
     <li><a href="{{ url_for('main') }}">Main page</a></li>
-    <li><a href="{{ url_for('hello')}}">Hello</a></li>
     <li><a href="{{ url_for('ask') }}">Ask</a></li>
     <li><a href="{{ url_for('submit') }}">Submit</a></li>
+    <li><a href="{{ url_for('view')}}">View</a></li>
   </ul>
 </nav>
 <section class="content">
