Update base and main page

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,11 +2,10 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 <title>{% block title %}{% endblock %} - PIC16B Website</title>
 <nav>
-  <h1>PIC16B Example Webapp!</h1>
+  <h1>PIC16B Web Development</h1>
   <!-- <b>Navigation:</b> -->
   <ul>
     <li><a href="{{ url_for('main') }}">Main page</a></li>
-    <li><a href="{{ url_for('ask') }}">Ask</a></li>
     <li><a href="{{ url_for('submit') }}">Submit</a></li>
     <li><a href="{{ url_for('view')}}">View</a></li>
   </ul>
