--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -1,3 +1,12 @@
-<!doctype html>
-<title>PIC16B Website</title>
-<p>Hello! This html is from a separate HTML file.</p>
+{% extends 'base.html' %}
+
+{% block header %}
+  <h1>{% block title %}Overview{% endblock %}</h1>
+{% endblock %}
+
+{% block content %}
+  <p>Welcome to our PIC16B example web application!</p>
+  <p> <a href="{{ url_for('submit') }}">Submit a Message Here</a></p>
+  <p> <a href="{{ url_for('view') }}">View Some Messages</a></p>
+
+{% endblock %}
