Remove unnecessary code and minor edits

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,8 +6,8 @@
   <!-- <b>Navigation:</b> -->
   <ul>
     <li><a href="{{ url_for('main') }}">Main page</a></li>
-    <li><a href="{{ url_for('submit') }}">Submit</a></li>
-    <li><a href="{{ url_for('view')}}">View</a></li>
+    <li><a href="{{ url_for('submit') }}">Submit A Message</a></li>
+    <li><a href="{{ url_for('view')}}">View Messages</a></li>
   </ul>
 </nav>
 <section class="content">
