--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -6,7 +6,7 @@
 
 {% block content %}
   <p>Welcome to our PIC16B example web application!</p>
-  <p> <a href="{{ url_for('submit') }}">Submit a Message Here</a></p>
-  <p> <a href="{{ url_for('view') }}">View Some Messages</a></p>
+  <li> You can either <a href="{{ url_for('submit') }}">Submit a Message Here</a></li>
+  <li> Or <a href="{{ url_for('view') }}">View Some Messages Here</a></li>
 
 {% endblock %}
