--- a/static/style.css
+++ b/static/style.css
@@ -48,7 +48,7 @@ nav ul li a {
     padding: 0 1rem 1rem;
     color: MidnightBlue;
     font-style: italic;
-    background: LightBlue;
+    background: whitesmoke;
     border-radius: 15px;
 }
 
